# estnin

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.rst  estnin.py  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  api.rst  conf.py  index.rst
tests/: manual_tests.py  test_estnin.py
