[aliases]
dist=bdist_wheel rotate -k1 -m.whl
test=pytest

[bdist_wheel]
universal = 1

# coverage configuration
[coverage:run]
branch  = True
include = *.py

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  if self.debug:
  if settings.DEBUG
  raise AssertionError
  raise NotImplementedError
  if 0:
  if __name__ == .__main__.:

[tool:pytest]
addopts = --verbose -x --cov-report html:tests/coverage/ --cov estnin
python_files = tests/*.py

[metadata]
description-file = README.rst
license_files = LICENSE.txt
